[tool.poetry]
name = "tunnel-gui"
version = "0.1.0"
description = ""
authors = ["Andrei <andrei@iamprofessional.dev>"]
readme = "README.md"
packages = [{include = "tunnel_gui"}]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^2.2.2"
waitress = "^2.1.2"
Flask-WTF = "^1.0.1"
python-dotenv = "^0.21.0"
pydantic = "^1.10.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
